log
Wed, Apr 16, 2025  8:32:31 AM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:21: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     nuevoMapa->size = NULL;
                     ^
hashmap.c:58:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     nuevoMapa->current = NULL;
                        ^
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  8:34:51 AM: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
5fbfd7d
Wed, Apr 16, 2025  8:36:17 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
49daf32
Wed, Apr 16, 2025  8:41:14 AM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
96661f0
Wed, Apr 16, 2025  8:41:49 AM: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
374e23f
Wed, Apr 16, 2025  9:17:45 AM: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  1|5
total_score: 10/70
0f3fe70
mi., 16 de abr. de 2025 21:07:35: 
 hashmap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
4f00727
mi., 16 de abr. de 2025 21:10:03: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
cb0f352
